<resources>
    <string name="app_name">WeFund</string>
    <string name="action_settings">Settings</string>

    <string name="pref_auto_sync">Auto sync enable</string>
    <string name="pref_auto_sync_summ">Auto sync data from network</string>
    <string name="pref_period_sync">Periodic sync enable</string>
    <string name="pref_period_sync_summ">Periodic sync data from network</string>
    <string name="pref_period_sync_interval">Period of periodic sync</string>
    <string name="pref_period_sync_interval_summ">Number of seconds of sync period</string>

    <string name="title_activity_settings">Settings</string>

    <string name="description_refresh">Refresh</string>

    <string name="title_activity_fund_detail">FundDetail</string>

    <string name="menu_search">Search</string>

    <string name="search_label">Fund</string>

    <string name="search_hint">请输入母基金代码</string>

    <string name="incorrect_code">亲，代码好像不正确哦~</string>


</resources>
