<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.edu.pku.kingarcher.wefund.MainActivity">
    <item android:id="@+id/search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_autorenew_white_24dp"
        android:title="@string/description_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
